// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extends-bound.js [babel-flow] format 1`] = `
"Unexpected token, expected "," (3:13)
  1 | // @flow
  2 |
> 3 | type F = <T extends string>(t: T) => T;
    |             ^
  4 |
Cause: Unexpected token, expected "," (3:12)"
`;

exports[`extends-bound.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

type F = <T extends string>(t: T) => T;

=====================================output=====================================
// @flow

type F = <T extends string>(t: T) => T;

================================================================================
`;

exports[`issue-5283.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

let f: <A>((
  (?A) => B
)) => B;


export const testFunctionOnOptionsAsArgument: <T1,a>(?a, ((?a) => T1)) => T1 = function _(Arg1, Arg2) { const result = TypesBS.testFunctionOnOptionsAsArgument((Arg1 == null ? undefined : Arg1), Arg2); return result };

=====================================output=====================================
let f: <A>(((?A) => B)) => B;

export const testFunctionOnOptionsAsArgument: <T1, a>(?a, ((?a) => T1)) => T1 =
  function _(Arg1, Arg2) {
    const result = TypesBS.testFunctionOnOptionsAsArgument(
      Arg1 == null ? undefined : Arg1,
      Arg2,
    );
    return result;
  };

================================================================================
`;
